--- a/calendar/styles.css
+++ b/calendar/styles.css
@@ -72,7 +72,7 @@
   font-size: 20px!important;
   font-weight: bold!important;
   color: #DDD!important;
-  background:url(https://raw.github.com/mmoustafa/Chalkboard/master/img/bg.png)!important;
+  background:url(navy.jpg)!important;
   padding-top: 5px!important;
   padding-left: 5px!important;
   padding-bottom: 5px!important;
